Fix enables line breaks in text.

--- a/app/assets/stylesheets/show_item.scss
+++ b/app/assets/stylesheets/show_item.scss
@@ -136,6 +136,7 @@
 
     &__item-introduction {
       margin-bottom: 6%;
+      word-break: break-word;
       &__text {
         font-size: 18px;
         letter-spacing: 2px;
